--- a/exercises/ch15.01-03/ex05/index1.html
+++ b/exercises/ch15.01-03/ex05/index1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
@@ -12,7 +12,7 @@
     <script src="
 https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js
 "></script>
-    <script src="/ch15.01-03/ex05/index1.js"></script>
+    <script src="./index1.js" defer="true"></script>
   </head>
   <body>
     <div hidden id="1">1</div>
