--- a/exercises/ch15.01-03/ex13/index.html
+++ b/exercises/ch15.01-03/ex13/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>家電オンラインショップ</title>
-    <script type="module" src="/ch15.01-03/ex13/index.js"></script>
+    <script type="module" src="./index.js"></script>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -116,14 +116,10 @@
   <body>
     <header>
       <div class="cart">
-        <a href="#cart"
-          ><img src="./30" alt="カート"
-        /></a>
+        <a href="#cart"><img src="./30" alt="カート" /></a>
       </div>
       <div class="account">
-        <a href="#account"
-          ><img src="./30" alt="アカウント"
-        /></a>
+        <a href="#account"><img src="./30" alt="アカウント" /></a>
       </div>
       <h1>家電オンラインショップ</h1>
     </header>
