--- a/exercises/ch15.01-03/ex06/index.html
+++ b/exercises/ch15.01-03/ex06/index.html
@@ -28,7 +28,7 @@
     </style>
   </head>
   <body>
-    <h1>💰 おめでとうございます！ 💰</h1>
+    <h1>💰 おおきに！ 💰</h1>
     <p>お使いのPCの情報が完全に流出しました。</p>
     <p>以下、流出した情報の一部となります。</p>
     <div class="box" id="infoBox"></div>
