--- a/exercises/ch15.01-03/ex14/index.html
+++ b/exercises/ch15.01-03/ex14/index.html
@@ -12,7 +12,7 @@
           const products = document.querySelectorAll("#productList li");
           products.forEach((product) => {
             // ここにコードを書いて完成させる
-            const category = product.dataset.category;
+            const category = product.getAttribute("data-category");
             if (selectedCategory === "all" || category === selectedCategory) {
               product.style.display = "";
             } else {
