--- a/exercises/ch15.01-03/ex05/index1.html
+++ b/exercises/ch15.01-03/ex05/index1.html
@@ -12,7 +12,7 @@
     <script src="
 https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js
 "></script>
-    <script src="./index1.js" defer="true"></script>
+    <script src="./index1.js"></script>
   </head>
   <body>
     <div hidden id="1">1</div>
