--- a/exercises/ch15.01-03/ex14/index.html
+++ b/exercises/ch15.01-03/ex14/index.html
@@ -18,6 +18,7 @@
             } else {
               product.style.display = "none";
             }
+            //ここまで
           });
         });
     </script>
