--- a/exercises/ch15.04-10/ex02/index.html
+++ b/exercises/ch15.04-10/ex02/index.html
@@ -1,47 +1,59 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
   <head>
     <title>Simple ToDo</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <script type="module" src="/ch15.04-10/ex02/index.js"></script>
+    <script type="module" src="index.js"></script>
     <!-- 以下の style.css は Tailwind CLI によって生成される -->
     <!-- html または js を変更した場合は README.md に従い Tailwind CLI を実行し style.css を再度生成すること -->
-    <link rel="stylesheet" href="/ch15.04-10/ex02/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <!-- IMPORTANT: ChatGPT にはここから下の内容しか変更させないこと -->
-  <body>
-    <form id="new-todo-form">
-      <input type="text" id="new-todo" placeholder="What needs to be done?" />
-      <button>Add</button>
-    </form>
-    <ul id="todo-list">
-      <!-- NOTE: 以下のような要素を JavaScript で動的に追加する
-      <li class="completed">
-        <div class="view">
-          <input class="toggle" type="checkbox" checked />
-          <label class="content">研修の予習範囲を読む</label>
-          <button class="destroy"></button>
-        </div>
-      </li>
-      <li>
-        <div class="view">
-          <input class="toggle" type="checkbox" />
-          <label class="content">研修の練習問題を完了する</label>
-          <button class="destroy"></button>
-        </div>
-      </li>
-      -->
-    </ul>
+  <body class="bg-gray-100 min-h-screen flex justify-center items-start p-6">
+    <div class="space-y-6">
+      <h1 class="text-2xl font-bold text-gray-800 text-center">ToDo アプリ</h1>
 
-    <template id="todo-template">
-      <li>
-        <div class="view">
-          <input class="toggle" type="checkbox" />
-          <label class="content"></label>
-          <button class="destroy">❌</button>
-        </div>
-      </li>
-    </template>
+      <!-- 入力フォーム -->
+      <form
+        id="new-todo-form"
+        class="flex max-w-sm mx-auto shadow rounded overflow-hidden"
+      >
+        <input
+          type="text"
+          id="new-todo"
+          placeholder="What needs to be done?"
+          class="flex-grow px-3 py-2 border-none focus:outline-none focus:ring-2 focus:ring-blue-500 text-sm"
+        />
+        <button
+          class="bg-blue-500 text-white px-4 py-2 hover:bg-blue-600 transition text-sm"
+        >
+          Add
+        </button>
+      </form>
+
+      <!-- ToDoリスト -->
+      <ul id="todo-list" class="max-w-sm mx-auto space-y-3"></ul>
+
+      <!-- テンプレート -->
+      <template id="todo-template">
+        <li
+          class="bg-white shadow rounded-md p-3 flex items-center justify-between hover:bg-gray-50 transition"
+        >
+          <div class="flex items-center space-x-3">
+            <input
+              class="toggle w-4 h-4 text-blue-500 border-gray-300 rounded"
+              type="checkbox"
+            />
+            <label class="content text-gray-700 text-sm"></label>
+          </div>
+          <button
+            class="destroy bg-red-100 text-red-600 hover:bg-red-200 rounded-full w-7 h-7 flex items-center justify-center text-sm"
+          >
+            ❌
+          </button>
+        </li>
+      </template>
+    </div>
   </body>
 </html>
