--- a/exercises/ch15.04-10/ex01/index.html
+++ b/exercises/ch15.04-10/ex01/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
   <head>
     <title>Simple ToDo</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <script type="module" src="/ch15.04-10/ex01/index.js"></script>
-    <link rel="stylesheet" href="/ch15.04-10/ex01/style.css" />
+    <script type="module" src="./index.js"></script>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <form id="new-todo-form">
