--- a/exercises/ch15.04-10/ex10/index.html
+++ b/exercises/ch15.04-10/ex10/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
   <head>
     <title>Life Game</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <script type="module" src="/ch15.04-10/ex10/index.js"></script>
+    <script type="module" src="./index.js"></script>
     <style>
       canvas {
         border: 1px solid black;
