第8開を終えて

--- a/exercises/ch15.04-10/ex10/index.html
+++ b/exercises/ch15.04-10/ex10/index.html
@@ -20,5 +20,6 @@
     <canvas id="screen"></canvas>
     <button id="start">Start</button>
     <button id="pause">Pause</button>
+    <button id="gliderGun">Glider Gun</button>
   </body>
 </html>
